[gd_scene load_steps=2 format=3 uid="uid://mission_hud_scene"]

[ext_resource type="Script" path="res://scenes/ui/mission_hud.gd" id="1_script"]

[node name="MissionHUD" type="Control"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -320.0
offset_bottom = 200.0
grow_horizontal = 0
mouse_filter = 2
script = ExtResource("1_script")

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = 180.0
grow_horizontal = 0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="MissionLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.8, 0.4, 1)
theme_override_font_sizes/font_size = 18
text = "DEPLOYMENT"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBox"]
layout_mode = 2
theme_override_constants/separation = 4
theme_override_styles/separator = SubResource("StyleBoxLine_sep")

[node name="ObjectiveLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.95, 0.95, 1)
theme_override_font_sizes/font_size = 14
text = "Current objective text goes here and can wrap to multiple lines."
autowrap_mode = 2

[node name="HintLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.65, 0.7, 1)
theme_override_font_sizes/font_size = 12
text = "Hint: Additional context for the objective"
autowrap_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="Panel/VBox"]
visible = false
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_progress_bg")
theme_override_styles/fill = SubResource("StyleBoxFlat_progress_fill")
max_value = 5.0
value = 2.0
show_percentage = false

[node name="TimerLabel" type="Label" parent="Panel/VBox"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 16
text = "25:00"
horizontal_alignment = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.08, 0.08, 0.12, 0.85)
border_width_left = 2
border_width_top = 1
border_width_right = 1
border_width_bottom = 2
border_color = Color(0.4, 0.35, 0.2, 0.8)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
content_margin_left = 16.0
content_margin_top = 12.0
content_margin_right = 16.0
content_margin_bottom = 12.0

[sub_resource type="StyleBoxLine" id="StyleBoxLine_sep"]
color = Color(0.4, 0.35, 0.2, 0.5)
thickness = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_progress_bg"]
bg_color = Color(0.15, 0.15, 0.2, 0.8)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_progress_fill"]
bg_color = Color(0.6, 0.5, 0.2, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2



